--- a/res/css/style2.css
+++ b/res/css/style2.css
@@ -1,12 +1,20 @@
-#logo{ height:100%; width:240px; border:0; cursor:pointer; text-decoration:none; display:flex; flex-flow:row nowrap; justify-content:center; align-items:center; gap:0 flex-grow:0; flex-shrink:0; background:url('../img/logo.svg') center center no-repeat; padding-left:20px; } 
+#logo{ height:100%; width:240px; border:0; cursor:pointer; text-decoration:none; display:flex; flex-flow:row nowrap; justify-content:center; align-items:center; gap:0; flex-grow:0; flex-shrink:0; background:url('../img/logo.svg') center center no-repeat; padding-left:20px; } 
 #logo img{ height:60%; width:auto; } 
 #logo img:last-child{ display:none; }
 @media (max-width:760px){
     header#header{ padding:0; }
-    #logo{ padding-left:5px; }
+    #logo{ padding-left:5px; width: 180px; } /* Уменьшаем логотип на мобильных */
     #logo img:first-child{ display:none; }
     #logo img:last-child{ display:block; } 
     .basic_radio .gray_input{ padding:0; }
+}
+
+@media (max-width:480px){
+    #logo{ width: 140px; } /* Еще больше уменьшаем на маленьких экранах */
+}
+
+@media (max-width:360px){
+    #logo{ width: 120px; } /* Минимальный размер для очень маленьких экранов */
 }
 
 
@@ -87,7 +95,6 @@
 #battlefield .sector .coincontainer{ width:100%; height:auto; display:flex; flex-flow:row nowrap; justify-content:center; align-items:center; gap:0; position:relative; transform-origin:center; transition:transform 0.5s linear; perspective:1000px; }
 #battlefield .sector .coincontainer .coinwrapper{ width:75%; }
 #battlefield .sector .coincontainer .coin{ width:62%; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); } 
-#battlefield .sector .coincontainer .a{}
 #battlefield .sector .coincontainer .b{ opacity:0; }
 #battlefield .sector .coincontainer .c{ opacity:0; }
 #battlefield .sector .coincontainer .d{ opacity:0; }
