--- a/res/css/style2.css
+++ b/res/css/style2.css
@@ -72,15 +72,15 @@
 
 /* Изменяем позицию курицы для мобильных версий */
 @media (max-width:700px){
-    #chick .inner{ bottom: -170px; } /* Поднимаем курицу выше на мобильных */
+    #chick .inner{ bottom: -150px !important; } /* Поднимаем курицу выше на мобильных */
 }
 
 @media (max-width:480px){
-    #chick .inner{ bottom: -170px; } /* Поднимаем курицу выше на маленьких экранах */
+    #chick .inner{ bottom: -150px !important; } /* Поднимаем курицу выше на маленьких экранах */
 }
 
 @media (max-width:360px){
-    #chick .inner{ bottom: -170px; } /* Поднимаем курицу выше на очень маленьких экранах */
+    #chick .inner{ bottom: -150px !important; } /* Поднимаем курицу выше на очень маленьких экранах */
 }
 
 
